err/myproxywebservice.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/MyProxyClient-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/MyProxyWebService-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteScript-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/myproxy'...
Listing './lib/python3.5/site-packages/myproxy/server'...
Listing './lib/python3.5/site-packages/myproxy/server/wsgi'...
Listing './lib/python3.5/site-packages/myproxy/test'...
Listing './lib/python3.5/site-packages/myproxy/utils'...
Listing './lib/python3.5/site-packages/myproxy/ws'...
Listing './lib/python3.5/site-packages/myproxy/ws/client'...
Compiling './lib/python3.5/site-packages/myproxy/ws/client/__init__.py'...
***   File "./lib/python3.5/site-packages/myproxy/ws/client/__init__.py", line 142
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/myproxy/ws/client/test'...
Listing './lib/python3.5/site-packages/myproxy/ws/server'...
Listing './lib/python3.5/site-packages/myproxy/ws/server/wsgi'...
Compiling './lib/python3.5/site-packages/myproxy/ws/server/wsgi/httpbasicauth.py'...
***   File "./lib/python3.5/site-packages/myproxy/ws/server/wsgi/httpbasicauth.py", line 358
    except HttpBasicAuthResponseException, e:
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/myproxy/ws/server/wsgi/middleware.py'...
***   File "./lib/python3.5/site-packages/myproxy/ws/server/wsgi/middleware.py", line 195
    except crypto.Error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/myproxy/ws/test'...
Listing './lib/python3.5/site-packages/myproxy/ws/test/ca'...
Compiling './lib/python3.5/site-packages/myproxy/ws/test/test_myproxywsgi.py'...
***   File "./lib/python3.5/site-packages/myproxy/ws/test/test_myproxywsgi.py", line 118
    print response
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/myproxy/ws/test/test_myproxywsgi_with_paster.py'...
***   File "./lib/python3.5/site-packages/myproxy/ws/test/test_myproxywsgi_with_paster.py", line 97
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/script'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package/+package+'...
Listing './lib/python3.5/site-packages/paste/script/util'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
